fix: 現在時刻を基準として直近の予定を表示するように修正

--- a/public/data/east.json
+++ b/public/data/east.json
@@ -1,49 +1,256 @@
 {
   "meta": {
-    "sheetName": "東側時間順",
-    "sourceFile": "sample.xlsx",
-    "generatedAt": "2024-02-15T08:00:00+09:00",
+    "sheetName": "東側時間順 ",
+    "sourceFile": "発車データ.xlsx",
+    "generatedAt": "2025-09-22T07:07:37.588Z",
     "configKey": "east"
   },
   "entries": [
     {
-      "id": "east-0830-supplier-a",
       "number": "1",
-      "arrivalTime": "08:30",
-      "finishTime": "09:00",
-      "supplierName": "あずま資材",
+      "arrivalTime": "3:50",
+      "finishTime": "3:55",
+      "supplierName": "豊川加藤1便",
       "preparation": "単独",
-      "note": "7番シャッターから入線",
-      "yard": "第1置場",
-      "lane": "Aレーン",
-      "supplierReading": "あずましざい",
-      "materialReading": "けんちくざい"
+      "yard": "東側のみ",
+      "lane": "④or⑤",
+      "supplierReading": "とよかわかとういちびん",
+      "materialReading": "せいひんえー",
+      "id": "east-350-001"
     },
     {
-      "id": "east-0900-supplier-bc",
       "number": "2",
-      "arrivalTime": "09:00",
-      "finishTime": "09:45",
-      "supplierName": "きたの資材　みなみ商事",
+      "arrivalTime": "4:50",
+      "finishTime": "4:55",
+      "supplierName": "不二電子",
       "preparation": "2社",
-      "note": "順番確認のうえ入線",
-      "yard": "第2置場",
-      "lane": "Bレーン",
-      "supplierReading": "きたのしざい　みなみしょうじ",
-      "materialReading": "かぐようざい"
+      "note": "混載不可",
+      "yard": "西側のみ",
+      "lane": "⑧",
+      "supplierReading": "ふじでんし",
+      "materialReading": "せいひんびー",
+      "id": "east-450-002"
     },
     {
-      "id": "east-0945-supplier-d",
       "number": "3",
-      "arrivalTime": "09:45",
-      "finishTime": "10:15",
-      "supplierName": "とうよう物流",
+      "arrivalTime": "4:50",
+      "finishTime": "4:55",
+      "supplierName": "中央発條（東洋含む）",
+      "yard": "西側のみ",
+      "lane": "⑧",
+      "supplierReading": "ちゅうおうはつじょう",
+      "materialReading": "せいひんしー",
+      "id": "east-450-003"
+    },
+    {
+      "number": "4",
+      "arrivalTime": "5:10",
+      "finishTime": "5:15",
+      "supplierName": "矢崎工業",
       "preparation": "単独",
-      "note": "",
-      "yard": "第3置場",
-      "lane": "Cレーン",
-      "supplierReading": "とうようぶつりゅう",
-      "materialReading": "かなざい"
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "やざきこうぎょう",
+      "materialReading": "せいひんでぃー",
+      "id": "east-510-004"
+    },
+    {
+      "number": "5",
+      "arrivalTime": "6:30",
+      "finishTime": "6:35",
+      "supplierName": "可児加藤",
+      "preparation": "単独",
+      "note": "木曜のみ",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "かにかとう",
+      "materialReading": "せいひんいー",
+      "id": "east-630-005"
+    },
+    {
+      "number": "6",
+      "arrivalTime": "6:40",
+      "finishTime": "6:45",
+      "supplierName": "福寿工業",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "ふくじゅこうぎょう",
+      "materialReading": "せいひんえふ",
+      "id": "east-640-006"
+    },
+    {
+      "number": "7",
+      "arrivalTime": "7:35",
+      "finishTime": "7:40",
+      "supplierName": "スギヤマ",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "②",
+      "supplierReading": "すぎやま",
+      "materialReading": "せいひんじー",
+      "id": "east-735-007"
+    },
+    {
+      "number": "8",
+      "arrivalTime": "8:50",
+      "finishTime": "8:55",
+      "supplierName": "山村ガラス",
+      "preparation": "単独",
+      "yard": "西側のみ",
+      "lane": "直置き",
+      "supplierReading": "やまむらがらす",
+      "materialReading": "せいひんえいち",
+      "id": "east-850-008"
+    },
+    {
+      "number": "9",
+      "arrivalTime": "10:20",
+      "finishTime": "10:25",
+      "supplierName": "三和マテリアル",
+      "preparation": "2社",
+      "note": "混載不可",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "さんわまてりある",
+      "materialReading": "せいひんあい",
+      "id": "east-1020-009"
+    },
+    {
+      "number": "10",
+      "arrivalTime": "10:20",
+      "finishTime": "10:25",
+      "supplierName": "京セラ",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "きょうせら",
+      "materialReading": "せいひんじぇい",
+      "id": "east-1020-010"
+    },
+    {
+      "number": "11",
+      "arrivalTime": "11:30",
+      "finishTime": "11:35",
+      "supplierName": "豊川加藤2便",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "④or⑤",
+      "supplierReading": "とよかわかとうにびん",
+      "materialReading": "せいひんけい",
+      "id": "east-1130-011"
+    },
+    {
+      "number": "12",
+      "arrivalTime": "11:40",
+      "finishTime": "11:45",
+      "supplierName": "東亜電機",
+      "preparation": "単独",
+      "yard": "西側のみ",
+      "lane": "⑪",
+      "supplierReading": "とうあでんき",
+      "materialReading": "せいひんえる",
+      "id": "east-1140-012"
+    },
+    {
+      "number": "13",
+      "arrivalTime": "11:45",
+      "finishTime": "11:50",
+      "supplierName": "光徳便（高棚便空箱含む）",
+      "preparation": "複数社",
+      "note": "右表参考",
+      "yard": "東西あり",
+      "lane": "②③⑨⑩",
+      "supplierReading": "こうとくびん",
+      "materialReading": "せいひんえむ",
+      "id": "east-1145-013"
+    },
+    {
+      "number": "14",
+      "arrivalTime": "13:30",
+      "finishTime": "13:35",
+      "supplierName": "日邦産業",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "にっぽうさんぎょう",
+      "materialReading": "せいひんえぬ",
+      "id": "east-1330-014"
+    },
+    {
+      "number": "15",
+      "arrivalTime": "13:50",
+      "finishTime": "13:55",
+      "supplierName": "マツダ",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "まつだ",
+      "materialReading": "せいひんおー",
+      "id": "east-1350-015"
+    },
+    {
+      "number": "16",
+      "arrivalTime": "14:25",
+      "finishTime": "14:30",
+      "supplierName": "ピエゾ棟間便",
+      "preparation": "単独",
+      "note": "ユニット、X線",
+      "yard": "東側のみ",
+      "lane": "⑦",
+      "supplierReading": "ぴえぞとうかんびん",
+      "materialReading": "せいひんぴー",
+      "id": "east-1425-016"
+    },
+    {
+      "number": "17",
+      "arrivalTime": "16:00",
+      "finishTime": "16:05",
+      "supplierName": "日伸工業",
+      "preparation": "単独",
+      "yard": "東側のみ",
+      "lane": "⑥",
+      "supplierReading": "にっしんこうぎょう",
+      "materialReading": "せいひんきゅー",
+      "id": "east-1600-017"
+    },
+    {
+      "number": "18",
+      "arrivalTime": "20:00",
+      "finishTime": "20:05",
+      "supplierName": "高棚便",
+      "preparation": "複数社",
+      "note": "右表参考",
+      "yard": "東西あり",
+      "lane": "②③⑨⑩",
+      "supplierReading": "たかたなびん",
+      "materialReading": "せいひんあーる",
+      "id": "east-2000-018"
+    },
+    {
+      "number": "19",
+      "arrivalTime": "23:10",
+      "finishTime": "23:15",
+      "supplierName": "高棚便",
+      "preparation": "複数社",
+      "note": "右表参考",
+      "yard": "東西あり",
+      "lane": "②③⑨⑩",
+      "supplierReading": "たかたなびん",
+      "materialReading": "せいひんえす",
+      "id": "east-2310-019"
+    },
+    {
+      "number": "20",
+      "arrivalTime": "2:00",
+      "finishTime": "2:05",
+      "supplierName": "高棚便",
+      "preparation": "複数社",
+      "note": "右表参考",
+      "yard": "東西あり",
+      "lane": "②③⑨⑩",
+      "supplierReading": "たかたなびん",
+      "materialReading": "せいひんてぃー",
+      "id": "east-200-020"
     }
   ]
 }
