--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "tsx": "^4.7.0"
+    "vite": "^7.1.7"
   }
 }
