--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "convert": "tsx scripts/convert-excel.ts"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "xlsx": "^0.18.5"
   },
