--- a/public/data/east.json
+++ b/public/data/east.json
@@ -24,7 +24,7 @@
       "finishTime": "4:55",
       "supplierName": "不二電子",
       "preparation": "2社",
-      "note": "混載不可",
+      "restriction": "混載不可",
       "yard": "西側のみ",
       "lane": "⑧",
       "supplierReading": "ふじでんし",
@@ -215,9 +215,9 @@
     },
     {
       "number": "18",
-      "arrivalTime": "20:00",
+      "arrivalTime": "19:15",
       "finishTime": "20:05",
-      "supplierName": "高棚便",
+      "supplierName": "あいうえおかきくけこ\nさしすせそたちつてと",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
@@ -230,7 +230,7 @@
       "number": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:15",
-      "supplierName": "高棚便",
+      "supplierName": "あいうえおかきくけこ\nさしすせそたちつてと",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
