--- a/public/data/east.json
+++ b/public/data/east.json
@@ -230,7 +230,7 @@
       "number": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:15",
-      "supplierName": "あいうえおかきくけこ\nさしすせそたちつてと",
+      "supplierName": "光徳便（高棚便空箱含む）",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
