--- a/public/data/east.json
+++ b/public/data/east.json
@@ -217,7 +217,7 @@
       "number": "18",
       "arrivalTime": "20:00",
       "finishTime": "20:05",
-      "supplierName": "高棚便",
+      "supplierName": "高棚便\nああああ",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
@@ -230,7 +230,7 @@
       "number": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:30",
-      "supplierName": "高棚便",
+      "supplierName": "光徳便（高棚便空箱含む）",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
