先発・次発の取得ロジックを修正

--- a/public/data/east.json
+++ b/public/data/east.json
@@ -235,7 +235,7 @@
       "note": "右表参考",
       "yard": "東西あり",
       "lane": "②③⑨⑩",
-      "supplierReading": "たかたなびん",
+      "supplierReading": "こうとくびん、たかたなびんからばこふくむ",
       "materialReading": "せいひんえす",
       "id": "east-2310-019"
     },
