--- a/public/data/east.json
+++ b/public/data/east.json
@@ -230,7 +230,7 @@
       "number": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:30",
-      "supplierName": "光徳便（高棚便空箱含む）",
+      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
@@ -243,7 +243,7 @@
       "number": "20",
       "arrivalTime": "2:00",
       "finishTime": "2:05",
-      "supplierName": "高棚便",
+      "supplierName": "高棚便\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
