--- a/public/data/east.json
+++ b/public/data/east.json
@@ -10,7 +10,7 @@
       "number": "1",
       "arrivalTime": "3:50",
       "finishTime": "3:55",
-      "supplierName": "豊川加藤1便",
+      "supplierName": "豊川加藤1便\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
       "preparation": "単独",
       "yard": "東側のみ",
       "lane": "④or⑤",
@@ -230,7 +230,7 @@
       "number": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:30",
-      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬",
+      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
@@ -243,7 +243,7 @@
       "number": "20",
       "arrivalTime": "2:00",
       "finishTime": "2:05",
-      "supplierName": "高棚便\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫⑬",
+      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
