fix: モニタ設定が見つからないときの表示を修正

--- a/public/data/east.json
+++ b/public/data/east.json
@@ -243,7 +243,7 @@
       "number": "20",
       "arrivalTime": "2:00",
       "finishTime": "2:05",
-      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
+      "supplierName": "日伸工業",
       "preparation": "複数社",
       "note": "右表参考",
       "yard": "東西あり",
