fix: ポーリング・音声再生の動作を修正

--- a/config/excel-config.json
+++ b/config/excel-config.json
@@ -1,9 +1,9 @@
 {
   "headerRows": 3,
   "terminationColumn": "arrivalTime",
-  "twoSupplierJoiner": "　",
+  "twoSupplierJoiner": "\n",
   "columns": {
-    "number": "B",
+    "order": "B",
     "arrivalTime": "C",
     "finishTime": "D",
     "supplierName": "E",
