--- a/public/config/monitor-config.json
+++ b/public/config/monitor-config.json
@@ -4,8 +4,8 @@
   "pollingIntervalSeconds": 30,
   "speechFormat": "{supplierReading}、がにゅうせんします。{materialReading}、のじゅんびをおねがいします。",
   "displaySettings": {
-    "showBeforeMinutes": 30,
-    "emptyTimeMessage": "しばらく入線予定はありません"
+    "beforeMinutes": 30,
+    "emptyTimeMessage": "{beforeMinutes}分以内の入線予定はありません"
   },
   "monitors": [
     {
@@ -27,12 +27,6 @@
       "audioSettings": {
         "timings": [30, 25, 20, 18, 15, 10, 5, 0]
       }
-    },
-    {
-      "id": "3",
-      "title": "東置場（音声なし）",
-      "dataUrl": "/data/east.json",
-      "hasAudio": false
     }
   ]
 }
