--- a/public/data/east.json
+++ b/public/data/east.json
@@ -2,12 +2,13 @@
   "meta": {
     "sheetName": "東側時間順 ",
     "sourceFile": "発車データ.xlsx",
-    "generatedAt": "2025-10-22T02:39:18.694Z",
+    "generatedAt": "2025-10-24T01:37:19.558Z",
     "configKey": "east"
   },
   "entries": [
     {
-      "number": "1",
+      "id": "east-350-001",
+      "order": "1",
       "arrivalTime": "3:50",
       "finishTime": "3:55",
       "supplierName": "豊川加藤1便",
@@ -15,35 +16,24 @@
       "yard": "東側のみ",
       "lane": "④or⑤",
       "supplierReading": "とよかわかとういちびん",
-      "materialReading": "せいひんえー",
-      "id": "east-350-001"
+      "materialReading": "せいひんえー"
     },
     {
-      "number": "2",
+      "id": "east-450-002",
+      "order": "2",
       "arrivalTime": "4:50",
       "finishTime": "4:55",
-      "supplierName": "不二電子",
+      "supplierName": "不二電子\n中央発條（東洋含む）",
       "preparation": "2社",
       "note": "混載不可",
       "yard": "西側のみ",
       "lane": "⑧",
-      "supplierReading": "ふじでんし",
-      "materialReading": "せいひんびー",
-      "id": "east-450-002"
+      "supplierReading": "ふじでんし\nちゅうおうはつじょう",
+      "materialReading": "せいひんびー\nせいひんしー"
     },
     {
-      "number": "3",
-      "arrivalTime": "4:50",
-      "finishTime": "4:55",
-      "supplierName": "中央発條（東洋含む）",
-      "yard": "西側のみ",
-      "lane": "b",
-      "supplierReading": "ちゅうおうはつじょう",
-      "materialReading": "せいひんしー",
-      "id": "east-450-003"
-    },
-    {
-      "number": "4",
+      "id": "east-510-003",
+      "order": "4",
       "arrivalTime": "5:10",
       "finishTime": "5:15",
       "supplierName": "矢崎工業",
@@ -51,11 +41,11 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "やざきこうぎょう",
-      "materialReading": "せいひんでぃー",
-      "id": "east-510-004"
+      "materialReading": "せいひんでぃー"
     },
     {
-      "number": "5",
+      "id": "east-630-004",
+      "order": "5",
       "arrivalTime": "6:30",
       "finishTime": "6:35",
       "supplierName": "可児加藤",
@@ -64,11 +54,11 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "かにかとう",
-      "materialReading": "せいひんいー",
-      "id": "east-630-005"
+      "materialReading": "せいひんいー"
     },
     {
-      "number": "6",
+      "id": "east-640-005",
+      "order": "6",
       "arrivalTime": "6:40",
       "finishTime": "6:45",
       "supplierName": "福寿工業",
@@ -76,11 +66,11 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "ふくじゅこうぎょう",
-      "materialReading": "せいひんえふ",
-      "id": "east-640-006"
+      "materialReading": "せいひんえふ"
     },
     {
-      "number": "7",
+      "id": "east-735-006",
+      "order": "7",
       "arrivalTime": "7:35",
       "finishTime": "7:40",
       "supplierName": "スギヤマ",
@@ -88,11 +78,11 @@
       "yard": "東側のみ",
       "lane": "②",
       "supplierReading": "すぎやま",
-      "materialReading": "せいひんじー",
-      "id": "east-735-007"
+      "materialReading": "せいひんじー"
     },
     {
-      "number": "8",
+      "id": "east-850-007",
+      "order": "8",
       "arrivalTime": "8:50",
       "finishTime": "8:55",
       "supplierName": "山村ガラス",
@@ -100,35 +90,24 @@
       "yard": "西側のみ",
       "lane": "直置き",
       "supplierReading": "やまむらがらす",
-      "materialReading": "せいひんえいち",
-      "id": "east-850-008"
+      "materialReading": "せいひんえいち"
     },
     {
-      "number": "9",
-      "arrivalTime": "10:20",
-      "finishTime": "10:25",
-      "supplierName": "三和マテリアル",
+      "id": "east-1020-008",
+      "order": "9",
+      "arrivalTime": "11:10",
+      "finishTime": "11:15",
+      "supplierName": "三和マテリアル\n光徳便（高棚便空箱含む）あ",
       "preparation": "2社",
       "note": "混載不可",
       "yard": "東側のみ",
       "lane": "⑦",
-      "supplierReading": "さんわまてりある",
-      "materialReading": "せいひんあい",
-      "id": "east-1020-009"
+      "supplierReading": "さんわまてりある\nきょうせら",
+      "materialReading": "せいひんあい\nせいひんじぇい"
     },
     {
-      "number": "10",
-      "arrivalTime": "10:20",
-      "finishTime": "10:25",
-      "supplierName": "京セラ",
-      "yard": "東側のみ",
-      "lane": "⑦",
-      "supplierReading": "きょうせら",
-      "materialReading": "せいひんじぇい",
-      "id": "east-1020-010"
-    },
-    {
-      "number": "11",
+      "id": "east-1130-009",
+      "order": "11",
       "arrivalTime": "11:30",
       "finishTime": "11:35",
       "supplierName": "豊川加藤2便",
@@ -136,11 +115,11 @@
       "yard": "東側のみ",
       "lane": "④or⑤",
       "supplierReading": "とよかわかとうにびん",
-      "materialReading": "せいひんけい",
-      "id": "east-1130-011"
+      "materialReading": "せいひんけい"
     },
     {
-      "number": "12",
+      "id": "east-1140-010",
+      "order": "12",
       "arrivalTime": "11:40",
       "finishTime": "11:45",
       "supplierName": "東亜電機",
@@ -148,11 +127,11 @@
       "yard": "西側のみ",
       "lane": "⑪",
       "supplierReading": "とうあでんき",
-      "materialReading": "せいひんえる",
-      "id": "east-1140-012"
+      "materialReading": "せいひんえる"
     },
     {
-      "number": "13",
+      "id": "east-1145-011",
+      "order": "13",
       "arrivalTime": "11:45",
       "finishTime": "11:50",
       "supplierName": "光徳便（高棚便空箱含む）",
@@ -161,11 +140,11 @@
       "yard": "東西あり",
       "lane": "②③⑨⑩",
       "supplierReading": "こうとくびん",
-      "materialReading": "せいひんえむ",
-      "id": "east-1145-013"
+      "materialReading": "せいひんえむ"
     },
     {
-      "number": "14",
+      "id": "east-1330-012",
+      "order": "14",
       "arrivalTime": "13:30",
       "finishTime": "13:35",
       "supplierName": "日邦産業",
@@ -173,11 +152,11 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "にっぽうさんぎょう",
-      "materialReading": "せいひんえぬ",
-      "id": "east-1330-014"
+      "materialReading": "せいひんえぬ"
     },
     {
-      "number": "15",
+      "id": "east-1350-013",
+      "order": "15",
       "arrivalTime": "13:50",
       "finishTime": "13:55",
       "supplierName": "マツダ",
@@ -185,11 +164,11 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "まつだ",
-      "materialReading": "せいひんおー",
-      "id": "east-1350-015"
+      "materialReading": "せいひんおー"
     },
     {
-      "number": "16",
+      "id": "east-1425-014",
+      "order": "16",
       "arrivalTime": "14:25",
       "finishTime": "14:30",
       "supplierName": "ピエゾ棟間便",
@@ -198,23 +177,23 @@
       "yard": "東側のみ",
       "lane": "⑦",
       "supplierReading": "ぴえぞとうかんびん",
-      "materialReading": "せいひんぴー",
-      "id": "east-1425-016"
+      "materialReading": "せいひんぴー"
     },
     {
-      "number": "17",
-      "arrivalTime": "15:10",
+      "id": "east-1600-015",
+      "order": "17",
+      "arrivalTime": "16:00",
       "finishTime": "16:05",
       "supplierName": "日伸工業",
       "preparation": "単独",
       "yard": "東側のみ",
       "lane": "⑥",
       "supplierReading": "にっしんこうぎょう",
-      "materialReading": "せいひんきゅー",
-      "id": "east-1600-017a"
+      "materialReading": "せいひんきゅー"
     },
     {
-      "number": "18",
+      "id": "east-2000-016",
+      "order": "18",
       "arrivalTime": "20:00",
       "finishTime": "20:05",
       "supplierName": "高棚便",
@@ -223,11 +202,11 @@
       "yard": "東西あり",
       "lane": "②③⑨⑩",
       "supplierReading": "たかたなびん",
-      "materialReading": "せいひんあーる",
-      "id": "east-2000-018"
+      "materialReading": "せいひんあーる"
     },
     {
-      "number": "19",
+      "id": "east-2310-017",
+      "order": "19",
       "arrivalTime": "23:10",
       "finishTime": "23:15",
       "supplierName": "高棚便",
@@ -236,11 +215,11 @@
       "yard": "東西あり",
       "lane": "②③⑨⑩",
       "supplierReading": "たかたなびん",
-      "materialReading": "せいひんえす",
-      "id": "east-2310-019"
+      "materialReading": "せいひんえす"
     },
     {
-      "number": "20",
+      "id": "east-200-018",
+      "order": "20",
       "arrivalTime": "2:00",
       "finishTime": "2:05",
       "supplierName": "高棚便",
@@ -249,34 +228,7 @@
       "yard": "東西あり",
       "lane": "②③⑨⑩",
       "supplierReading": "たかたなびん",
-      "materialReading": "せいひんてぃー",
-      "id": "east-200-020"
-    },
-    {
-      "number": "21",
-      "arrivalTime": "15:30",
-      "finishTime": "15:35",
-      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
-      "preparation": "複数社",
-      "note": "右表参考",
-      "yard": "東西あり",
-      "lane": "②③⑨⑩",
-      "supplierReading": "たかたなびん",
-      "materialReading": "せいひんてぃー",
-      "id": "east-200-021"
-    },
-    {
-      "number": "22",
-      "arrivalTime": "15:35",
-      "finishTime": "15:40",
-      "supplierName": "光徳便（高棚便空箱含む）\n①②③④⑤⑥⑦⑧⑨⑩⑪⑫",
-      "preparation": "複数社",
-      "note": "右表参考",
-      "yard": "東西あり",
-      "lane": "②③⑨⑩",
-      "supplierReading": "たかたなびん",
-      "materialReading": "せいひんてぃー",
-      "id": "east-200-022"
+      "materialReading": "せいひんてぃー"
     }
   ]
 }
