style: レイアウト調整

--- a/public/data/east.json
+++ b/public/data/east.json
@@ -110,7 +110,7 @@
       "order": "11",
       "arrivalTime": "11:30",
       "finishTime": "11:35",
-      "supplierName": "豊川加藤2便",
+      "supplierName": "三和マテリアル\n光徳便（高棚便空箱含む）",
       "preparation": "単独",
       "yard": "東側のみ",
       "lane": "④or⑤",
@@ -122,7 +122,7 @@
       "order": "12",
       "arrivalTime": "11:40",
       "finishTime": "11:45",
-      "supplierName": "東亜電機",
+      "supplierName": "三和マテリアル\n光徳便（高棚便空箱含む）",
       "preparation": "単独",
       "yard": "西側のみ",
       "lane": "⑪",
