--- a/public/data/east.json
+++ b/public/data/east.json
@@ -184,7 +184,7 @@
       "order": "17",
       "arrivalTime": "16:00",
       "finishTime": "16:05",
-      "supplierName": "日伸工業",
+      "supplierName": "三和マテリアル\n光徳便（高棚便空箱含む）",
       "preparation": "単独",
       "yard": "東側のみ",
       "lane": "⑥",
