fix: 画面表示や音声再生のロジックで扱う時刻に日付を付与、音声が長いとき途中で打ち切られる問題を修正

--- a/public/data/east.json
+++ b/public/data/east.json
@@ -214,7 +214,7 @@
       "note": "右表参考",
       "yard": "東西あり",
       "lane": "②③⑨⑩",
-      "supplierReading": "たかたなびん",
+      "supplierReading": "こうじょうないのみなさまにおしらせします。ひがしおきば、にじゅうさんじじゅっぷんに、たかたなびん",
       "materialReading": "せいひんえす"
     },
     {
